The ui-fixed-hidden class now switches the toolbar's positioning to "absolute" when hidden. This allows a hidden fixed toolbar to still be visible if you scroll to top. Fullscreen toolbars are hidden with a negative left value as well, so that they're entirely off screen.

--- a/css/structure/jquery.mobile.headerfooter.css
+++ b/css/structure/jquery.mobile.headerfooter.css
@@ -28,10 +28,17 @@
 .ui-page-footer-fixed {
 	padding-bottom: 3em;
 }
-.ui-page-fullscreen .ui-content {
+.ui-page-header-fullscreen .ui-content,
+.ui-page-footer-fullscreen .ui-content {
 	padding: 0;
 }
-.ui-fixed-hidden,
+.ui-fixed-hidden {
+	position: absolute;
+}
+.ui-page-header-fullscreen .ui-fixed-hidden,
+.ui-page-footer-fullscreen .ui-fixed-hidden {
+	left: -99999em;
+}
 .ui-footer-duplicate {
 	display: none;
 }
